<resources>
    <string name="app_name">Demeter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- UTILS -->
    <string name="remove">Effacer</string>
    <string name="colon" translatable="false">:</string>
    <string name="empty_field">Champs obligatoire</string>
    <string name="error_title">Oups ! :o</string>
    <string name="ok">Ok</string>
    <string name="set_birth_date_error">Merci de sélectionner une date de naissance</string>
    <string name="aucun">Aucun</string>

    <!-- SERVICES -->
    <string name="laundry">Laverie</string>
    <string name="laundry_users">Machines en cours</string>
    <string name="laundry_item">Que souhaitez-vous ajouter ?</string>
    <string name="laundry_item_add">Ajouter</string>
    <string name="laundry_item_quantity">En quelle quantité ?</string>
    <string name="donations">Dons</string>
    <string name="donations_inventory">Dons en stock</string>
    <string name="lockers">Casiers</string>
    <string name="lockers_users">Casiers utilisés</string>
    <string name="add_services">+ 1</string>
    <string name="submit_service">C\'est parti !</string>

    <!-- ITEMS -->
    <string name="dnts_dental_kit">Kit dentaire</string>
    <string name="dnts_shaving_kit">Kit de rasage</string>
    <string name="dnts_cap">Bonnets</string>
    <string name="dnts_belt">Ceinture</string>
    <string name="dnts_shoes">Chaussures</string>
    <string name="dnts_socks">Chaussettes</string>
    <string name="dnts_scarf">Echarpe</string>
    <string name="dnts_gloves">Gants</string>
    <string name="dnts_coat">Manteau</string>
    <string name="dnts_trousers">Pantalon</string>
    <string name="dnts_pullover">Pull</string>
    <string name="dnts_underpants">Slip</string>
    <string name="dnts_tshirt">T-Shirt</string>
    <string name="dnts_suitcase">Valise</string>
    <string name="dnts_pet_shop">Animalerie</string>
    <string-array name="donations_array">
        <item>Kit dentaire</item>
        <item>Kit de rasage</item>
        <item>Bonnets</item>
        <item>Ceinture</item>
        <item>Chaussures</item>
        <item>Chaussettes</item>
        <item>Echarpe</item>
        <item>Gants</item>
        <item>Manteau</item>
        <item>Pantalon</item>
        <item>Pull</item>
        <item>Slip</item>
        <item>T-Shirt</item>
        <item>Valise</item>
        <item>Animalerie</item>
    </string-array>

    <!-- LAUNDRY -->
    <string name="laundry_person_label">Pour quelle personne ?</string>

    <!-- DIALOGS -->
    <string name="positive_button">Ok</string>
    <string name="negative_button">Annuler</string>
    <string name="validation_button">Valider</string>

    <!-- STATS FRAGMENT -->
    <string name="percent"> %</string>
    <string name="stats_summary_label">Bilan de la soirée en cours:</string>
    <string name="women_rate_label">de femmes</string>
    <string name="mood_rate_label">bonne humeur</string>
    <string name="presence_rate_label">présents</string>
    <string name="stats_spinner_label">Quelle données souhaitez-vous consulter ?</string>
    <string name="stats_date_range_label">Sur quelle période ?</string>
    <string name="stats_submit">Visualiser</string>
    <string name="stats_date_range_begin">Début</string>
    <string name="stats_date_range_end">Fin</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="stats_label">Statistiques</string>
    <string name="list_label">Liste des personnes</string>
    <string name="services_label">Services</string>

    <!-- RECIPIENT PROFIL-->
    <string name="lastname_label">Nom: </string>
    <string name="firstname_label">Prénom: </string>
    <string name="recipient_add_label">Nouvelle personne</string>
    <string name="recipient_mood">Humeur:</string>
    <string name="recipient_pic">Photo</string>
    <string name="recipient_date_birth_label">Né(e) le:</string>
    <string name="recipient_date_birth_hint">../../....</string>
    <string name="recipient_nationality_label">Nationalité:</string>
    <string name="recipient_meeting_place">Lieu de rencontre:</string>
    <string name="recipient_meeting_was_planned_label">La rencontre était-elle prévue ?</string>
    <string name="recipient_contact_agent_label">Aviez-vous été contacté par un agent ?</string>
    <string name="recipient_partner_label">Maraude avec un partenaire ?</string>
    <string name="recipient_partner_label_2">Partenaire de maraude:</string>
    <string-array name="recipient_contact_agent_array">
        <item>Transpole</item>
        <item>Citeo</item>
        <item>Médiapole</item>
        <item>SNCF</item>
        <item>Autre</item>
    </string-array>
    <string-array name="recipient_sex_array">
        <item>@string/recipient_male</item>
        <item>@string/recipient_female</item>
        <item>@string/recipient_other_sex</item>
    </string-array>
    <string-array name="partners_array">
        <item>Diogène</item>
        <item>Samu Social</item>
        <item>Accueil de jour</item>
        <item>Centre de santé</item>
        <item>Halte de nuit</item>
        <item>Maraude générale ABEJ</item>
        <item>Autre</item>
    </string-array>
    <string name="recipient_male">Monsieur</string>
    <string name="recipient_female">F</string>
    <string name="recipient_other_sex">O</string>
    <string name="recipient_created">La personne a bien été ajoutée à la base !</string>
    <string name="recipient_created_and_added_to_list">La personne a bien été ajoutée à la base et à la liste !</string>
    <string name="recipient_added_to_list">Les personnes ont bien été ajoutées à la liste</string>
    <string name="recipient_history">Historique</string>
    <string name="recipient_informations">Informations</string>
    <string name="recipient_registration_date">Date d\'orientation:</string>
    <string name="recipient_sex_label">Sexe: </string>
    <string name="recipient_add_to_list">Ajouter à la liste ?</string>
    <string name="recipient_send_action">Ajouter</string>
    <string name="recipient_cancel_action">Annuler</string>
    <string name="recipient_comment">Commentaire</string>

    <!-- EDUCATOR PROFILE -->
    <string name="log_out_button">Déconnexion</string>
    <string name="navigation_drawer_open">Ouverture</string>
    <string name="navigation_drawer_close">Fermeture</string>
    <string name="educator_administration">Gestion des éducateurs</string>
    <string name="educator_validate">Valider</string>

    <!-- ACTIONS ITEMS -->
    <string-array name="action_types">
        <item>@string/action_entretien</item>
        <item>@string/action_action</item>
        <item>@string/action_demarche</item>
        <item>@string/action_accompagnement</item>
        <item>@string/action_refus</item>
        <item>@string/action_visite</item>
    </string-array>
    <string name="action_entretien">Entretien</string>
    <string name="action_action">Action</string>
    <string name="action_demarche">Démarche</string>
    <string name="action_accompagnement">Accompagnement</string>
    <string name="action_refus">Refus</string>
    <string name="action_visite">Visite</string>
    <string-array name="items_entretien">
        <item>Prise de contact</item>
        <item>Maintient du lien</item>
        <item>RDV fixé</item>
    </string-array>
    <string-array name="items_action">
        <item>Orientation</item>
        <item>Appel d\'urgence</item>
        <item>Aide matérielle</item>
        <item>Restauration/Soupe</item>
    </string-array>
    <string-array name="items_demarches">
        <item>Administration</item>
        <item>Démarche Médicale</item>
        <item>Démarches Sociale</item>
    </string-array>
    <string-array name="items_accompagnement">
        <item>Accompagnement Médical</item>
        <item>Nuit</item>
        <item>Accompagnement Social</item>
        <item>Administration</item>
        <item>Domicile</item>
        <item>Achats</item>
    </string-array>
    <string-array name="items_visites">
        <item>A domicile</item>
        <item>A l\'hopital</item>
        <item>A l\'EPSM</item>
        <item>En lit halte soins santé</item>
        <item>En cure</item>
    </string-array>
    <string-array name="orientation_details">
        <item>Médicale</item>
        <item>Nuit</item>
        <item>Sociale</item>
        <item>Urgence</item>
    </string-array>
    <string-array name="appel_urgence_details">
        <item>Police</item>
        <item>SAMU</item>
        <item>Pompiers</item>
        <item>115</item>
    </string-array>
    <string-array name="administration_details">
        <item>Banque</item>
        <item>CAF</item>
        <item>CMU/CMUC/AME</item>
        <item>CNI</item>
        <item>CPAM</item>
        <item>Impots</item>
        <item>MDPH</item>
        <item>Pole Emploi</item>
        <item>Préfecture</item>
        <item>Retraite</item>
        <item>Autres</item>
    </string-array>
    <string-array name="demarche_medical_details">
        <item>Alcoologie</item>
        <item>Psychiatrie</item>
        <item>Somatique</item>
    </string-array>
    <string-array name="demarche_sociale_details">
        <item>Contrat tutelle</item>
        <item>Domiciliation</item>
        <item>Inscription SIAO</item>
    </string-array>
    <string-array name="accompagnement_medical_details">
        <item>Centre de Santé</item>
        <item>Cure</item>
        <item>Hopitaux</item>
        <item>CMP/EPSM</item>
        <item>Médecin solidarité Lille</item>
        <item>Lit halte soins santé</item>
        <item>Lit accueil médicalisé</item>
        <item>Autre</item>
    </string-array>
    <string-array name="accompagnement_nuit_details">
        <item>Halte de nuit</item>
        <item>Urgence/Hiver</item>
        <item>Place SIAO</item>
        <item>Autre</item>
    </string-array>
    <string-array name="accompagnement_social_details">
        <item>Accueil de jour</item>
        <item>Point de repère</item>
        <item>Tutelle</item>
        <item>Autre</item>
    </string-array>
    <string-array name="accompagnement_achats">
        <item>Hébergement</item>
        <item>Logement</item>
        <item>Cure</item>
        <item>Hospitalisation</item>
        <item>Divers</item>
    </string-array>
</resources>
